[tool.poetry]
name = "os-project"
version = "0.1.0"
description = ""
authors = ["Prapti Shadmaan <praptishadmaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
jupyterlab = "^3.3.2"
plotly = "^5.7.0"
tqdm = "^4.64.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
